--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -6,6 +6,7 @@
 
 .footer-conteiner {
     border-top: 1px solid rgba(fff .1);
+    width: 1140px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -115,4 +116,6 @@
 
 .footer-games {
     padding-top: 46px;
+    margin: auto;
+    height: auto;
 }
