--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -15,8 +15,44 @@
     /*margin-bottom: -7px;*/
 }
 
+.dropdown {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    padding-top: 10px;
+}
+
+.dropdown-icon {
+    position: absolute;
+    display: none;
+    width: 160px;
+    height: 80px;
+    background: url("../../img/grafik.png"), no-repeat;
+    justify-content: center;
+    align-items: center;
+    margin-top: 17px;
+}
+
+.dropdown:hover .dropdown-icon {
+    display: flex;
+}
+
+.dropdown:hover .contacts__graf {
+    color: #FFF;
+}
+
+.dropdown-icon::after {
+    content: "";
+    display: block;
+    height: 20px;
+    left: 0;
+    right: 0;
+    bottom: 70px;
+    position: absolute;
+}
+
 .contacts__graf{
-    /*display: block;*/
+    display: block;
     color: #98A4A8;
     font-size: 13px;
     line-height: 20px;
@@ -25,4 +61,16 @@
 
 .contacts__graf:hover {
     color: #FFF;
+}
+
+.contacts__work-time {
+    display: block;
+    color: #1E1F20;
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 21px;
+}
+
+.contacts__work-time > b {
+    font-weight: 700;
 }
