--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -1,7 +1,5 @@
 .footer {
     background: #17191C;
-    /*height: 152px;*/
-    /*position: relative;*/
 }
 
 .footer-conteiner {
@@ -13,36 +11,13 @@
     margin-top: auto;
 }
 
-/*.footer-column-left {
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer-column-right {
-    display: flex;
-    justify-content: space-between;
-}*/
-
-/*.footer .menu {
-    top: 39px;
-    left: 439px;
-}*/
-
-/*.socials {
-    position: absolute;
-    top: 35px;
-    right: 267px;
-}*/
-
 .socials__list {
     display: flex;
     justify-content: space-between;
 }
 
 .socials__item {
-    /*display: inline-block;
-    vertical-align: middle;*/
-    margin-right: 10px;
+     margin-right: 10px;
 }
 
 .socials__item:last-child {
@@ -58,60 +33,55 @@
 }
 
 .socials__item--icon--telegram .socials__link {
-    background: url("../../img/telegram.png"), lightgray 50% / cover no-repeat;
+    background: url("../../img/css_sprites.png") 46px -10px, lightgray 50% / cover no-repeat;
     border-radius: 50%;
 }
 
 .socials__item--icon--telegram .socials__link:hover {
-    background: url("../../img/telegram.png"), rgb(31, 30, 30) 75% / cover no-repeat;    
+    background: url("../../img/css_sprites.png") 46px -66px, rgb(31, 30, 30) 75% / cover no-repeat;    
     border-radius: 50%;
 }
 
 .socials__item--icon--vk .socials__link {
-    background: url("../../img/vk.png"), lightgray 50% / cover no-repeat;
+    background: url("../../img/css_sprites.png") -10px 46px, lightgray 50% / cover no-repeat;
     border-radius: 50%;
 }
 
 .socials__item--icon--vk .socials__link:hover {
-    background: url("../../img/vk.png"), rgb(31, 30, 30) 50% / cover no-repeat;
+    background: url("../../img/css_sprites.png") -66px 46px, rgb(31, 30, 30) 50% / cover no-repeat;
     border-radius: 50%;
 }
 
 .socials__item--icon--facebook .socials__link {
-    background: url("../../img/facebook.png"), lightgray 50% / cover no-repeat;
+    background: url("../../img/css_sprites.png") -10px -10px, lightgray 50% / cover no-repeat;
     border-radius: 50%; 
 }
 
 .socials__item--icon--facebook .socials__link:hover {
-    background: url("../../img/facebook.png"), rgb(31, 30, 30) 50% / cover no-repeat;
+    background: url("../../img/css_sprites.png") -66px -10px, rgb(31, 30, 30) 50% / cover no-repeat;
     border-radius: 50%; 
 }
 
 .socials__item--icon--instagram .socials__link {
-    background: url("../../img/instagram.png"), lightgray 50% / cover no-repeat;
+    background: url("../../img/css_sprites.png") -10px -66px, lightgray 50% / cover no-repeat;
     border-radius: 50%;  
 }
 
 .socials__item--icon--instagram .socials__link:hover {
-    background: url("../../img/instagram.png"), rgb(31, 30, 30) 50% / cover no-repeat;
+    background: url("../../img/css_sprites.png") -66px -66px, rgb(31, 30, 30) 50% / cover no-repeat;
     border-radius: 50%;
 }
 
 .contacts__free-call {
-    /*position: absolute;*/
-    /*display: inline-block;*/
     bottom: 16px;
-    /*right: 0;*/
     font-size: 11px;
     line-height: 20px;
     color: #9A9A9A;
-    /*margin-bottom: 13px;*/
 }
 
 .footer .contacts {
     display: flex;
     align-items: flex-end;
-    /*top: 47.64px;*/
 }
 
 .footer-games {
