--- a/css/main.css
+++ b/css/main.css
@@ -15,5 +15,8 @@
 
 @import url("./blocks/top-line.css");
 @import url("./blocks/page-content.css");
-/*@import url("./blocks/main-container.css");*/
 @import url("./blocks/partners.css");
+@import url("./blocks/welcome.css");
+@import url("./blocks/reviews.css");
+@import url("./blocks/separator.css");
+@import url("./blocks/form-reviews.css");
