--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -18,12 +18,8 @@ body {
     /*overflow: hidden;*/
     min-width: 1140px;
     min-height: 100%;
-    /*width: 1140px;
-    margin: 0 auto;*/
     display: flex;
     flex-direction: column;
-    /*background: url("/img/background1.png") center top no-repeat, url("/img/background2.png") center bottom no-repeat, #17191C;
-    /*background: #17191C;*/
 }
 
 .wrapper__content {
@@ -33,6 +29,22 @@ body {
 .main-page-wrapper {
     background: url("../../img/background1.png") center top no-repeat, url("../../img/background2.png") center bottom no-repeat, #17191C;
 }
+
+/*.wrapper-welcome {
+    /*background: url("../../img/background1.png") center center no-repeat, #17191C;*/
+/*   display: flex;
+}*/
+/*
+.container-welcome {
+    min-width: 1140px;
+    min-height: 960px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    background: url("../../img/background1.png") center top -66px no-repeat, #17191C;
+}*/
 
 .container {
     width: 1140px;
