--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -24,21 +24,22 @@
 
 .dropdown-icon {
     position: absolute;
-    display: none;
-    width: 160px;
-    height: 80px;
-    background: url("../../img/grafik.png"), no-repeat;
-    justify-content: center;
-    align-items: center;
-    margin-top: 17px;
+    display: block;
+    top: 100px;
+    right: -9999px;
+    /*opacity: 0;
+    transition: opacity .8s;*/
+
 }
 
 .dropdown:hover .dropdown-icon {
     display: flex;
+    right: 135px;
 }
 
 .dropdown:hover .contacts__graf {
     color: #FFF;
+
 }
 
 .dropdown-icon::after {
@@ -47,7 +48,7 @@
     height: 20px;
     left: 0;
     right: 0;
-    bottom: 70px;
+    bottom: 77px;
     position: absolute;
 }
 
@@ -64,11 +65,27 @@
 }
 
 .contacts__work-time {
+    width: 160px ;
+    height: 80px;
+    background: #EDEDED;
+    border-radius: 9px;
     display: block;
     color: #1E1F20;
     font-size: 13px;
     font-weight: 600;
     line-height: 21px;
+    text-align: center;
+    padding-top: 18px;
+}
+
+.triangle {
+    display: inline-block;
+    position: absolute;
+    content: "";
+    border: 12px solid transparent;
+    border-bottom-color: #EDEDED;
+    top: -22px;
+    left: 95px;
 }
 
 .contacts__work-time > b {
