--- a/css/blocks/separator.css
+++ b/css/blocks/separator.css
@@ -6,22 +6,25 @@
 .separator-content {
     display: flex;
     width: 1140px;
-    height: 363px;
+    min-height: 363px;
     margin: 0 auto;
     justify-content: space-between;
 }
 
 .separator-title {
-    width: 383px;
+    /*width: 383px;*/
+    width: 50%;
     display: flex;
     color: #FFF;
     font-size: 48px;
     font-weight: 700;
     align-items: center;
+    padding-right: 84px;
 }
 
 .separator-img {
-    width: 630px;
+    /*width: 630px;*/
+    width: 50%;
     height: auto;
     display: flex;
     background: url("../../img/oxx.png"), no-repeat;
