--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: space-between;
     padding-top: 25;
     margin-bottom: 132px;
