--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -15,7 +15,7 @@ body {
 }
 
 .wrapper {
-    /*overflow: hidden;*/
+    overflow: hidden;
     min-width: 1140px;
     min-height: 100%;
     display: flex;
